--- a/testingasparsing.tex
+++ b/testingasparsing.tex
@@ -122,9 +122,21 @@
 % the first part of the formatted document.
 \maketitle
 
-\section{Introduction}
+\section{Introduction: What is a Mad Lib?}
 
-Here is some text \cite{hypothesis}.
+\section{The Simplest Random Tester}
+
+\section{Everything is Parsing}
+
+\subsection{A Test Generator as an Interpreter}
+
+\section{Tools that Work This Way}
+
+One such tool is Hypothesis \cite{hypothesis}.  Another is DeepState \cite{DeepState}.
+
+\section{Practical Implications:  Implementing Ranges in DeepState}
+
+
 
 % The next two lines define the bibliography style to be used, and the bibliography file.
 \bibliographystyle{ACM-Reference-Format}
